Restore original post content about user stories

--- a/_posts/2025-05-17-new-post.md
+++ b/_posts/2025-05-17-new-post.md
@@ -1,9 +1,13 @@
 ---
 layout: post
-title: "New Post"
+title: "유저스토리를 작성하는 법"
 date: 2025-05-18 00:40:00 +0900
-categories: [Uncategorized]
-tags: [sample]
+categories: [Work]
+tags: [userstory]
 ---
 
-여기에 본문을 작성하세요.
+# 유저스토리라는 근본
+> As I User, I want to .. , so that I can ..
+
+
+언제나 유저스토리를 쓴다는 실무에서 이렇게 알고 있지만 한번도 저렇게 끝난 적이 없었다. 유저스토리의 근본적인 목적은 개발자와 디자이너에게 자유도를 주는 것에 있는 것인지 아닌지 햇갈리는 순간이 올 수밖에 없다. 모두가 애자일 개발에 동의하더라도 어느순간 메이커는 기획자의 정의에 따라 움직이고 싶어하는 순간 그 모든 애자일의 기본 원리는 일이 돌아가지 않도록 하는 원인이 되어버린다.
